滑动字符串测试-未验证功能

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = esp8285
 framework = arduino
-lib_deps = fastled/FastLED@^3.7.3
+lib_deps = 
+	fastled/FastLED@^3.7.3
+	sstaub/Ticker@^4.4.0
+	paulstoffregen/Time@^1.6.1
