--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp8285]
+[env:nodemcuv2]
 platform = espressif8266
-board = esp8285
+board = nodemcuv2
 framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.7.3
 	sstaub/Ticker@^4.4.0
 	paulstoffregen/Time@^1.6.1
+	;tzapu/WiFiManager@^2.0.17
+	;https://github.com/tzapu/WiFiManager.git
+	bblanchon/ArduinoJson@^7.1.0
+;	links2004/WebSockets@^2.6.0
+lib_ldf_mode = deep+
